2002-01-25  Werner Koch  <wk@gnupg.org>

	* cms.c (build_signed_data_attributes): Write the optional certs.
	* cert.c (ksba_cert_get_image): Don't return the image length but
	the parsed length.

2002-01-24  Werner Koch  <wk@gnupg.org>

	* cms.h: Add new member cert_info_list. 
	* cms.c (ksba_cms_add_cert): New.
	(ksba_cms_release): Release the cert info list.

2002-01-23  Werner Koch  <wk@gnupg.org>

	* crl.c (parse_to_next_update): Use measured length to fixup the
	tbs_len after reading the name.  Check tbs_len before checking 
	for the entry list.

	* ksba.h (KsbaKeyUsage): New.
	* cert.c (ksba_cert_get_key_usage): New.

	* cert.c (get_name): New, implemented rfc822 AltNames.
	(ksba_cert_get_issuer,ksba_cert_get_subject): Use it.

2002-01-22  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_is_ca): New.

	* ber-help.c (premature_eof): New.
	(eof_or_error): Use it here.
	(_ksba_ber_parse_tl): New.

2002-01-21  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_get_extension): New.
	(read_extensions): New.
	(ksba_cert_release): Release the cached extension info.

2002-01-14  Werner Koch  <wk@gnupg.org>

	* dn.c: Fixed oid table according to rfc2253.
	(append_atv): Do only use the allowed names.

2002-01-11  Werner Koch  <wk@gnupg.org>

	* dn.c (append_atv): Don't write a trailing hash sign.

	* time.c (_ksba_asntime_to_epoch): Kludge to cope with the Y2038
	problem.

	* crl.c (do_hash): New.  Apply the hashing where needed.

2002-01-10  Werner Koch  <wk@gnupg.org>

	* certreq.c, certreq.h: New.
	* keyinfo.c (_ksba_keyinfo_from_sexp): New.

	* der-encoder.c: Removed commented code.

2002-01-09  Werner Koch  <wk@gnupg.org>

	* dn.c (count_quoted_string, parse_rdn, write_escaped): New.
	(_ksba_dn_from_str): Implemented.

	* ber-help.c (_ksba_ber_count_tl): New.

	* util.h (spacep): New.
	(hexdigitp): Now takes a pointer as arg.
	
	* writer.c (do_writer_write): Set the error flag when we are out
	of core.
	(ksba_writer_snatch_mem): New.
